Rename to MSSQLScriptExecutor. Reword log and help text.

--- a/MSSQLScriptExecutor/Properties/launchSettings.json
+++ b/MSSQLScriptExecutor/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "SQLScriptExecutor": {
+    "MSSQLScriptExecutor": {
       "commandName": "Project"
     },
     "Docker": {
