--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,10 +43,19 @@ jobs:
           images: |
             spencerjones/mssql-script-accesstoken
             ghcr.io/${{ github.repository_owner }}/mssql-script-accesstoken
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: 'arm64'
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       
       - name: Build and push Docker images
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
+          platforms: linux/amd64,linux/arm64
           context: ./MSSQLScriptExecutor
           push: true
           tags: ${{ steps.meta.outputs.tags }}
