Use native build plaform with target platform arguments per https://devblogs.microsoft.com/dotnet/improving-multiplatform-container-support/

--- a/MSSQLScriptExecutor/Dockerfile
+++ b/MSSQLScriptExecutor/Dockerfile
@@ -1,18 +1,18 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG TARGETARCH
 WORKDIR /src
 COPY ["MSSQLScriptExecutor.csproj", ""]
-RUN dotnet restore "./MSSQLScriptExecutor.csproj"
+RUN dotnet restore -a "$TARGETARCH" "./MSSQLScriptExecutor.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "MSSQLScriptExecutor.csproj" -c Release -o /app/build
+RUN dotnet build -a "$TARGETARCH" "MSSQLScriptExecutor.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "MSSQLScriptExecutor.csproj" -c Release -o /app/publish
+RUN dotnet publish -a "$TARGETARCH" "MSSQLScriptExecutor.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
